tests/NormalTests/paczka1/small_fuzzy/69812605.err
Error in line 2: A831 S436 17,3
Error in line 8: mt4nip7CkF A831 79,6
Error in line 14: mt4nip7CkF S436 47,2
